--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,27 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+.active{
+  font-weight: bold;
+  background: linear-gradient(to right, #632EE3, #9F62F2);
+  background-clip: text;      
+  color: transparent;   
+  /* border-bottom: 1px solid #632EE3; */
+  position: relative;
+}
+.active::after {
+  content: '';
+  display: block;
+  height: 1px; /* thickness of underline */
+  width: 100%;
+  background: linear-gradient(to right, #632EE3, #9F62F2);
+  border-radius: 0px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.not-active{
+  color: black;
+}
